# duplicate_extraction

./: .gitignore  CMakeLists.txt  README.md  library.h  main.cpp  parquet_to_sqlite.py  test_documents.parquet
include/data/: document_store.hpp  duplicate_match.hpp
include/sql/: sql_handler.hpp
include/text_processing/: duplicate_finder.hpp  naive_suffix_builder.hpp  suffix_array_builder.hpp  utf8_handler.hpp
src/data/: document_store.cpp
src/sql/: sql_handler.cpp
src/text_processing/: duplicate_finder.cpp  naive_suffix_builder.cpp  suffix_array_builder.cpp  utf8_handler.cpp
tests/unit/data/: test_document_store.cpp
tests/unit/sql/: test_documents.db  test_documents.parquet  test_parquet_generator.py  test_sql_handler.cpp
tests/unit/text_processing/: test_duplicate_finder.cpp  test_naive_suffix_builder.cpp  test_utf8_handler.cpp
